# Faust

./: .cirrus.yml  .gitattributes  .gitignore  3D-panner.dsp  3dpanner.dsp  AGENTS.md  Granul8or.dsp  Pandemonium  README.md  SideSculpt.dsp  StereoPhaser.dsp  audio-manifesto.md  delayfreeze.dsp  stereophaser.dsp  temp_compile_test.cpp  visual-manifesto.md
.circleci/: config.yml
.opencode/: opencode.json  pr-body-dry-wet-knob.md
3-Beat-Problem/: app.js
3BeatProblem/: 3BeatProblem.cpp  3BeatProblem.h  _build.cmd  _deploy.ps1  build.ps1  build_task5.ps1  config.h  debug_len.py  do_build.bat  fix_braces.py  fix_constructor.py  gen_clean.py  gen_data.py  insert_data.py  kData_gen.txt  move_data.py  plan.md  run_fix.ps1  scale_system.h  sequencer_engine.h  test_format.py
BLUR/: .impeccable.md  ArtifactTestHarness.cpp  EmbeddedFonts.h  SVG_BACKGROUND_INTEGRATION.md  SpectralBlurTest.cpp  SpectralBlurTest.h  VOICING_PASS_2_FROZEN_IN_TIME.md  analyze_artifacts.py  build_m.txt  build_out.txt  copy_vst_log.txt  deploy-vst3.ps1  resources.h  sono_hex.txt  spectralblur.cpp  spectralblur.h
BronzeNoise/: BronzeNoise.cpp  BronzeNoise.h  build_and_install.ps1  build_vst3.ps1  config.h
DataBend/: DataBend.cpp  DataBend.h  DataBendIPlug2UI.cpp  DataBendIPlug2UI.h  build-databend.ps1  build_vst3.ps1  config.h
DustStopCpp/: DustStop.cpp  DustStop.h  DustStop_v5_1.cpp  build_vst3.ps1  config.h
Faust/: 3dpanner.dsp  DustStop.dsp  L-R8.dsp  QuantumDistortion.dsp  QuantumStutterRandomizer.dsp  SideSculpt.dsp  delayfreeze.dsp
Freeze95/: Freeze95.cpp  Freeze95.h  Freeze95DSP.dsp  Freeze95DSP.h  Freeze95DSP_NEW.h  Freeze95DSP_backup_complex.dsp  GUMROAD_README.md  IPlugEffect.vst3  (+26 more)
Grungr/: .impeccable.md  CMakeLists.txt  DSPGrungrFaustDSP.h  Grungr.RPP  Grungr.cpp  Grungr.dsp  Grungr.h  GrungrFaustCompat.h  GrungrIPlug2UI.cpp  GrungrIPlug2UI.h  _build.ps1  _deploy.ps1  build_vst3.ps1  config.h  deploy.ps1  deploy_copy_again.ps1  find_msbuild.ps1  probe-vs.ps1  rebuild.ps1  status_snapshot.txt
Grungr/DSP/: GrungrFaustDSP.h
Grungr/Grungr.xcworkspace/: contents.xcworkspacedata
Grungr/analysis/: grunge_ab_results.json  grunge_ab_summary.md
Grungr/config/: Grungr-ios.xcconfig  Grungr-mac.xcconfig  Grungr-wasm.mk  Grungr-web.mk  Grungr-win.props
Grungr/projects/: Grungr-aax.vcxproj  Grungr-aax.vcxproj.filters  Grungr-app.vcxproj  Grungr-app.vcxproj.filters  Grungr-clap.vcxproj  Grungr-clap.vcxproj.filters  Grungr-vst2.vcxproj  Grungr-vst2.vcxproj.filters  Grungr-vst3.vcxproj  Grungr-vst3.vcxproj.filters  Grungr-wam-controller.mk  Grungr-wam-processor.mk  Grungr-wasm-dsp.mk  Grungr-wasm-ui.mk
Grungr/projects/Grungr-iOS.xcodeproj/: project.pbxproj
Grungr/projects/Grungr-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
Grungr/projects/Grungr-macOS.xcodeproj/: project.pbxproj
Grungr/projects/Grungr-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
Grungr/resources/: AUv3Framework.h  Grungr-AAX-Info.plist  Grungr-AU-Info.plist  Grungr-CLAP-Info.plist  Grungr-Pages.xml  Grungr-VST2-Info.plist  Grungr-VST3-Info.plist  Grungr-iOS-AUv3-Info.plist  Grungr-iOS-AUv3Framework-Info.plist  Grungr-iOS-Info.plist  Grungr-iOS-LaunchScreen.storyboard  Grungr-iOS-MainInterface.storyboard  Grungr-macOS-AUv3-Info.plist  Grungr-macOS-AUv3Framework-Info.plist  Grungr-macOS-Info.plist  INSTALL_MACOS.md  main.rc  main.rc_mac_dlg
Grungr/scripts/: apply_logo_tint.ps1  makedist-wasm.sh  makedist-web.sh  prepare_resources-ios.py  prepare_resources-mac.py  set_logo_to_raw_color.ps1
Grungr/tests/: build_latency_probe.ps1  build_sanity.ps1  build_tests.ps1  latency_probe.cpp  sanity_check.cpp  test_dsp.cpp
Grungr/tools/: DODGrungeIPlug2Assets_Faceplate.inc  DODGrungeIPlug2Assets_Knob.inc  check_bitwig.ps1  faust_wav_renderer_arch.cpp  generate_embedded_assets.py  grunge_ab_harness.py  regen_faust.ps1
Grungr/tools/iplug2-ui/: DODGrungeIPlug2Assets.cpp  DODGrungeIPlug2Assets.h  DODGrungeIPlug2Assets_Faceplate.inc  DODGrungeIPlug2Assets_Knob.inc  DODGrungeIPlug2UI.cpp  EmbeddedAssets.h
(+484 files in other folders)
